2021-06-29 James D. Trotter <james@simula.no>

	Allow specifying a format string for outputting numerical values
	for Matrix Market objects.

	Fix various issues with installation and distribution.

	Rename `mtx_read' to `mtx_fread' and `mtx_write' to `mtx_fwrite'.

2021-06-18 James D. Trotter <james@simula.no>

        Initial version.

Copyright (C) 2021 James D. Trotter
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.